--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ img {
 footer {
   position: center;
   padding-top: 15px;
-  margin-top: 20px;
+  margin-top: 60px;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -233,6 +233,10 @@ footer {
     }
   }
 }
+.separador{
+    margin-bottom: 300px;
+    }
+
 .social li {
   width: 35px;
   height: 35px;
